# emdx

./: .env.test  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  AUTOMATION.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  COMMAND_MIGRATION_TABLE.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_CRISIS_GAMEPLAN.md  EMDX_Entry_Point_Refactoring_Gameplan.md  EMOJI_ALIASES_INTEGRATION.md  EMOJI_ALIAS_INTEGRATION_SUMMARY.md  EXAMPLES.md  GAMEPLAN_COMPLETION_REPORT.md  GAMEPLAN_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINTENANCE.md  MARKDOWN_RENDERING_IMPROVEMENTS.md  MIGRATION.md  OLD_COMMANDS_TO_REMOVE.md  PAGER_PLAN.md  QUICK_REFERENCE.md  README-v1-compound.md  README-v2-replaces.md  README-v3-bold.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  RELEASE_NOTES_0.7.0.md  SQLALCHEMY_MIGRATION_GAMEPLAN_UPDATED.md  SQLITE_MIGRATION_PLAN.md  TECH_DEBT_TASKS.md  TUI_TEST_PLAN.md  VIM_LINE_NUMBERS_ANALYSIS.md  another_test_file.py  (+51 more)
.claude/: MEMORY.md  settings.json  settings.template.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: bug-hunter.md  consistency-auditor.md  release-notes.md  synthesis-reviewer.md
.claude/commands/: analyze.md  audit.md  batch-delegate.md  dead-code.md  doc-audit.md  env-diag.md  fix-chain.md  fix-pr.md  gameplan-review.md  harvest.md  merge-chain.md  pr-check.md  readme-polish.md  release.md  research.md  review-issues.md  review-prs.md  screencast.md  swarm.md  task-audit.md  try-pr.md  tui-debug.md  tui-test.md
.claude/hooks/: auto-backup.sh  prime.sh  save-output.sh  session-end.sh
.github/: dependabot.yml  renovate.json
.github/workflows/: release.yml  security.yml  test.yml
archive/: EXECUTION_FIXES_SUMMARY.md  GAMEPLAN_COMPLETION_REPORT.md  RELEASE_NOTES_0.6.0.md  TUI_REFACTORING_PLAN.md  gameplan_fix_delete_modal.md  state_management_architecture.md  textual_message_comparison.md  vim_edit_mode_analysis.md
articles/best-practices-testing-plan-implementation-plan/: index.html
articles/browsepy-trashpy-and-tagspy-command-layer-architecture/: index.html
articles/browsepy-trashpy-tagspy/: index.html
articles/claude-configfish-claudepsql-and-root-cause/: index.html
articles/claude-configfish-claudepsql-root-cause/: index.html
articles/claude-find-claude-save-and-simplicity/: index.html
articles/claude-find-claude-save-simplicity/: index.html
articles/dendron-hierarchy-system-flat-files-dot-notation-and-schema-driven-structure/: index.html
articles/documentspy-emdx-models-and-database-layer/: index.html
articles/documentspy-emdxmodelstagspy-emdxmodels/: index.html
articles/done-from-e-task/: index.html
docs/: CURSOR_VS_CLAUDE_CLI_CHEATSHEET.md  CURSOR_VS_CLAUDE_CLI_README.md  README.md  agent-workflow.md  ai-agents.md  ai-system.md  analysis-cascade-metadata.md  analysis-delegate-vs-native-agents.md  analysis-kubernetes-sandbox-poc.md  analysis-lazy-loading.md  analysis-option-e-full-split.md  analysis-option-f-abandon-workflows.md  architecture.md  audit-2026-07-18.md  audit-commands.md  auto-wikify.md  beads-inspired-proposals.md  browser-dx-design.md  cascade.md  cli-api.md  comparison-obsidian.md  cursor-vs-claude-cli-json.md  database-design.md  development-setup.md  event-driven-streaming.md  feature-brainstorm.md  formatting-analysis.md  formatting-guide.md  formatting-guidelines.md  mail.md  mcp-server-analysis.md  memory-actions-reframe.md  plugin-architecture-analysis.md  plugin-guide.md  pulse-zoom-tui-spec.md  qa-screen-improvements.md  quick-reference.md  security-data-model.md  skills-reference.md  task-tui-research.md  (+11 more)
emdx/: FORMATTING_STANDARDS.md  __init__.py  __main__.py  browse.py  capture.py  cli.py  config.py  core.py  database.py  database_factory.py  database_postgres.py  error_handling.py  exceptions.py  gist.py  gui.py  main.py  markdown_config.py  mdcat_renderer.py  migrate.py  migrations.py  modal_browser.py  nvim_wrapper.py  onboarding.py  sqlite_database.py  tag_commands.py  tag_display.py  tags.py  textual_browser.py  textual_browser_improved.py  textual_browser_minimal.py  textual_loop.py  textual_markdown.py  types.py  utils.py
examples/: emoji_aliases_integration_example.py
hooks/: hooks.json  save-subagent-output.sh
old_analysis_scripts/: analyze_all_emdx.py  analyze_duplicate_titles.py  analyze_emdx.py  analyze_knowledge_base.py  analyze_untagged_docs.py  batch_tag_documents.py  create_analyze_pr.sh  create_pr.sh  delete_duplicates.py  delete_empty_docs.py  delete_empty_docs_auto.py  direct_analyze.py  duplicate_ids_deleted_backup.txt  emdx_analysis_20250717_201501.json  emdx_analysis_20250717_201501.md  emdx_analysis_20250717_204529.json  emdx_analysis_20250717_204529.md  export_analysis.py  find_duplicate_docs.py  find_duplicate_docs_fast.py  git_status.sh  run_analysis_now.py  run_analyze.py  run_emdx_analysis.py  test_manual_auto_tagger.py
scripts/: ensure-emdx.sh  env-diag.sh  pre-commit  release.py  test_v2_browsers.py  verify_unified_executor.py
search/: search_index.json
tests/: CLAUDE.md  EMOJI_ALIAS_TEST_SUMMARY.md  README.md  conftest.py  conftest_simple.py  formatting_test_document.md  test_activity_dashboard.py  test_activity_doc_type.py  test_activity_table.py  test_activity_view.py  test_agent_executor_integration.py  test_agent_system.py  test_agents.py  test_app_config.py  test_ask.py  test_ask_improvements.py  test_ask_modes.py  test_audit_coverage_gaps.py  test_auto_tagger.py  test_backup.py  test_briefing.py  test_browse.py  test_cache.py  test_cascade_metadata.py  test_cascade_progress.py  test_cascade_timing.py  test_categories.py  test_chunk_splitter.py  test_claude_execute.py  test_cli.py  test_cli_simple.py  test_cloud_backup.py  test_code_drift.py  test_commands_cascade.py  test_commands_core.py  test_commands_delegate.py  test_commands_groups.py  test_commands_prime.py  test_commands_recipe.py  test_commands_stale.py  (+176 more)
tools/: copy_py.fish  copy_tool.py
vscode-extension/: .vscodeignore  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
(+924 files in other folders)
