[tool.poetry]
name = "emdx"
version = "0.26.0"
description = "Send agents. Save everything. Track what's next."
authors = ["Alex Rockwell <arockwell@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/arockwell/emdx"
repository = "https://github.com/arockwell/emdx"
documentation = "https://github.com/arockwell/emdx#readme"
keywords = ["knowledge-base", "ai-agents", "claude", "cli", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.24.1"}
click = ">=8.1.0"  # Typer 0.15+ requires click 8.1+
rich = "^14.3.0"
textual = "^8.0.0"
psutil = "^7.0.0"
pyyaml = ">=6.0"
scikit-learn = "^1.6.0"
datasketch = "^1.6.0"
sentence-transformers = "^5.2.2"
numpy = "^2.4.2"
google-api-python-client = "^2.100.0"
google-auth-httplib2 = "^0.3.0"
google-auth-oauthlib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"
mypy = "^1.0.0"
pre-commit = "^4.5.1"
types-pyyaml = "^6.0.12.20250915"


[tool.poetry.group.wiki.dependencies]
python-igraph = "^1.0.0"
leidenalg = "^0.11.0"

[tool.poetry.scripts]
emdx = "emdx.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (typer pattern)
    "UP006", # Use {to} instead of {from} for type annotations (Python 3.9+)
    "UP007", # Use X | Y for Union (Python 3.10+)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Optional dependencies — not installed in CI base environment
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "numpy",
    "numpy.*",
    "datasketch",
    "datasketch.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "psutil",
    "psutil.*",
    "watchdog",
    "watchdog.*",
]
ignore_missing_imports = true

# Tests use mock-heavy patterns where type annotations add noise, not safety
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# click doesn't ship complete type stubs — suppress type errors in lazy loader
[[tool.mypy.overrides]]
module = "emdx.utils.lazy_group"
disable_error_code = ["valid-type", "misc", "no-any-return", "arg-type", "attr-defined"]

[tool.pytest.ini_options]
minversion = "9.0.0"
addopts = "-v --tb=short --strict-markers"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests requiring actual emdx commands (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["emdx"]